HTML Static Register page complete, added header, form, and footer

--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register Page</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <a href="#">About Us</a>
+      <a href="#">Log In</a>
+    </header>
+    <div>
+      <h1>Sign Up</h1>
+      <form>
+        <div>
+            <input type="email" placeholder="Email" name="email" required/>
+          </div>
+        <div>
+          <input type="text" placeholder="Username" name="username" required/>
+        </div>
+        <div>
+          <input type="password" placeholder="Password" name="password" required/>
+        </div>
+        <div>
+          <input type="password" placeholder="Confirm Password" name="confirmPassword" required/>
+        </div> 
+        <div>
+            <button type="submit">Submit</button>
+        </div>
+      </form>
+      <footer>
+        <img src="./assets/Facebook-Logo.png" alt="Facebook Logo" width="32" height="32">
+        <img src="./assets/Instagram-Logo.png" alt="Instagram Logo" width="32" height="32">
+        <img src="./assets/Twitter-Logo.png" alt="Twitter Logo" width="32" height="32">
+        <img src="./assets/TikTok-Logo.png" alt="TikTok Logo" width="32" height="32">
+        <img src="./assets/YouTube-Logo.png" alt="Youtube Logo" width="32" height="32">
+      </footer>
+    </div>
+  </body>
 </html>
